--- a/backend/test.env
+++ b/backend/test.env
@@ -1,3 +1,3 @@
 NODE_OPTIONS="--no-deprecation --no-experimental-strip-types"
-DATABASE_URI=mongodb+srv://hellomdkaifali_db_user:ht0t1iEmhCkorBqf@backend.zzjdjsk.mongodb.net/?retryWrites=true&w=majority&appName=Backend
+DATABASE_URI=mongodb://127.0.0.1:27017/testprepkart
 PAYLOAD_SECRET=your-secret-key-here-change-this-in-production
