--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@payloadcms/next": "3.57.0",
     "@payloadcms/payload-cloud": "3.57.0",
     "@payloadcms/richtext-lexical": "3.57.0",
+    "@payloadcms/richtext-slate": "^3.58.0",
     "@payloadcms/ui": "3.57.0",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
