Add scripts for course/blog HTML conversion and checks
Added new scripts to convert course HTML descriptions to Payload CMS blocks and rich text formats, and to examine course/blog content structures. Removed diagnose-deployment.js. Updated dependencies to include jsdom for HTML parsing. Minor formatting changes to comment import scripts.

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -19,9 +19,12 @@
     "import:school-comments": "node import-school-comments.js",
     "import:neet-comments": "node import-neet-comments.js",
     "import:ib-comments": "node import-ib-comments.js",
-    "import:ap-comments": "node import-ap-comments.js"
+    "import:ap-comments": "node import-ap-comments.js",
+    "convert:course-html": "node convert-course-html-to-richtext.js",
+    "convert:course-blocks": "node convert-course-html-to-blocks.js"
   },
   "dependencies": {
+    "jsdom": "^27.0.0",
     "mongodb": "^6.3.0"
   },
   "devDependencies": {
